fix css to prevent mobile horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 html {
   /* height: fit-content; */
+  max-width: 100vw;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
